更新的內容

--- a/week2/logoin/login.html
+++ b/week2/logoin/login.html
@@ -80,7 +80,7 @@
 
 </html>
 <!-- partial -->
-  <script type="module" src="./login.js"></script>
+  <script type="module" src="login.js"></script>
 
 </body>
 </html>
