--- a/week2/products/index.html
+++ b/week2/products/index.html
@@ -90,7 +90,7 @@
     </div>
   </div>
 <!-- partial -->
-  <script type="module" src="./products.js"></script>
+  <script type="module" src="products.js"></script>
 
 </body>
 </html>
