--- a/pro.html
+++ b/pro.html
@@ -1,14 +1,33 @@
+
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="zh-Hant-TW">
+
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Vue 直播班 2022 春季第一、二週模板(RESTful API 串接用)</title>
-  <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <style>
+    img {
+      object-fit: contain;
+      max-width: 100%;
+    }
 
+    .primary-image {
+      height: 300px;
+    }
+
+    .images {
+      height: 150px;
+    }
+  </style>
 </head>
+
 <body>
-<!-- partial:index.partial.html -->
-<div id="app">
+  <div id="app">
     <div class="container">
       <div class="row py-3">
         <div class="col-md-6">
@@ -32,43 +51,37 @@
               </tr>
             </thead>
             <tbody>
-              <tr v-for="item in products" :key="item.id">
-<!--                                 代出商品名稱 -->
+              <tr v-for="(item) in products" v-bind:key="item.id">
                 <td width="150">{{ item.title }}</td>
                 <td width="120">
-<!--                    代出商品原始售價 -->
                   {{ item.origin_price }}
                 </td>
                 <td width="120">
-<!--                      代出商品受價 -->
                   {{ item.price }}
                 </td>
                 <td width="150">
-<!--                                           事件監聽                  條件式渲染 v-if & v-else -->
-                  <span class="text-success" v-on:click="change(item)" v-if="item.is_enabled">啟用</span>
-        
-                  <span v-else v-on:click="change(item)">未啟用</span>
+                  <span v-if="item.is_enabled" class="text-success">啟用</span>
+                  <span v-else>未啟用</span>
                 </td>
                 <td width="120">
-                  <button type="button" class="btn btn-primary" v-on:click="temp=item">查看細節</button>
+                  <button type="button" class="btn btn-primary" v-on:click="tempProduct = item">查看細節</button>
                 </td>
               </tr>
             </tbody>
-          </table>          
-<!--                        代出商品列有幾項(跑長度) -->
+          </table>
           <p>目前有 <span>{{ products.length }}</span> 項產品</p>
         </div>
         <div class="col-md-6">
           <h2>單一產品細節</h2>
-          <template v-if="tempProduct.title">
+          <div v-if="tempProduct.title">
             <div class="card mb-3">
-              <img :src="tempProduct.imageUrl" class="card-img-top primary-image" alt="主圖">
+              <img v-bind:src="tempProduct.imageUrl" class="card-img-top primary-image" alt="主圖">
               <div class="card-body">
                 <h5 class="card-title">
-                  {{ tempProduct.tetle }}
+                  {{ tempProduct.title }}
                   <span class="badge bg-primary ms-2">{{ tempProduct.category }}</span>
                 </h5>
-                <p class="card-text">商品描述：{{ tempProduct.description}}</p>
+                <p class="card-text">商品描述：{{ tempProduct.description }}</p>
                 <p class="card-text">商品內容：{{ tempProduct.content }}</p>
                 <div class="d-flex">
                   <p class="card-text me-2">{{ tempProduct.price }}</p>
@@ -77,25 +90,19 @@
                 </div>
               </div>
             </div>
-<!--                                                                     v-bind簡寫 : -->
-            <dic v-for="(image,index) in tempProduct.imagesUrl" class="d-inline" :key="index">
-              <img :src="image" :alt="temp.category" class="images m-2">
-            <template>
-              <img src="" alt="" class="images m-2">
-            </template>
-          </template>
-          <p class="text-secondary" v-else>請選擇一個商品查看</p>
+            <span v-for="(image, id) in tempProduct.imagesUrl" v-bind:key="id">
+              <img v-if="image" v-bind:src="image" class="images m-2">
+            </span>
+          </div>
+          <p v-else class="text-secondary">請選擇一個商品查看</p>
         </div>
       </div>
     </div>
   </div>
-<!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
-  integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
-  crossorigin='anonymous'></script>
-
-  
-  <script type="module" src="./products.js"></script>
-
+    integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
+    crossorigin='anonymous'></script>
+  <script src="./products.js" type="module"></script>
 </body>
+
 </html>
