--- a/pro.html
+++ b/pro.html
@@ -60,7 +60,7 @@
                   {{ item.price }}
                 </td>
                 <td width="150">
-                  <span v-if="item.is_enabled" class="text-success">啟用</span>
+                  <span v-if="item.is_enabled + item.id" class="text-success">啟用</span>
                   <span v-else>未啟用</span>
                 </td>
                 <td width="120">
