--- a/pro.html
+++ b/pro.html
@@ -31,6 +31,9 @@
     <div class="container">
       <div class="row py-3">
         <div class="col-md-6">
+          <button class="btn btn-primary" type="button" @click="openModal">
+            建立新的產品
+          </button>
           <h2>產品列表</h2>
           <table class="table table-hover mt-4">
             <thead>
@@ -65,6 +68,8 @@
                 </td>
                 <td width="120">
                   <button type="button" class="btn btn-primary" v-on:click="tempProduct = item">查看細節</button>
+                  <!-- <button type="button" class="btn btn-outline-danger btn-sm" @click="openModal('delete', item)"> -->
+                  刪除
                 </td>
               </tr>
             </tbody>
@@ -98,10 +103,43 @@
         </div>
       </div>
     </div>
+    <!-- modal -->
+    <div class="modal fade" id="productsModal"  ref="productsModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="productsModal">
+              <span>新增產品</span>
+              <span>編輯產品</span>
+            </h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    
+
+    
+
+    <!-- modal -->
+
   </div>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.9.1/axios.min.js'
     integrity='sha512-Xk3wWei2TGrsh9kDSBKUMIjw/86sLUvhtnv9f7fOuIwhhiUTKz8szkWkzHthrM5Bb3Bu9idSzkxOrkzhcneuiw=='
     crossorigin='anonymous'></script>
+  
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js"
+    integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
   <script src="./products.js" type="module"></script>
 </body>
 
